# spotsterr

python/: main.py  pyproject.toml
spotsterr/: Cargo.toml  README.md  Trunk.toml
spotsterr/src/: main.rs  playlist.rs  score.rs
