[package]
name = "spotsterr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
futures-util = "0.3.31"
rspotify = { version = "0.14.0", features = ["env-file", "cli"] }
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
