[package]
name = "spotsterr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
futures-util = "0.3.31"
reqwest = { version = "0.12.18", features = ["json"] }
rspotify = { version = "0.14.0", features = ["env-file", "cli"] }
scraper = "0.23.1"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
